# multi_window_output

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: Window.rs  colors.rs  lib.rs  main.rs  window.rs
src/Window/: Buffer.rs
src/window/: buffer.rs
