[package]
name = "multi-window-output"
version = "0.1.0"
edition = "2021"
description = "Tool for allowing multiple output windows in the same screen."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
