[package]
name = "multi-window-output"
version = "0.1.2"
edition = "2021"
description = "Tool for allowing multiple output windows in the same screen."
license = "MIT"
repository = "https://github.com/alonso284/multi_window_output"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
